[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
redis = { version = "0.23", features = ["tokio-comp"] }
tracing-subscriber = "0.3.19"
tower-http = {version="0.6.6",features = ["trace"]}
axum = "0.8.4"
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
chrono = "0.4.41"
tower = "0.5.2"
